--- a/src/main/resources/static/richTextEditor.html
+++ b/src/main/resources/static/richTextEditor.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 </head>
 <body>
+<button onclick="alert(ueditor.getContent())">显示内容</button>
 <!-- 接入编辑器 -->
 <div>
     <script id="container" type="text/plain">这里写你的初始化内容</script>
